# breakpoint-library

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  PLAN.md  README.md  TEST_METHODOLOGY.md  USAGE_GUIDE.md  VISUALIZATION_FEATURES.md  action.yml  pyproject.toml  test_results.txt
.github/workflows/: publish-pypi.yml  test.yml
breakpoint/cli/: main.py
breakpoint/config/: default_policies.json
breakpoint/config/presets/: __init__.py  chatbot.json  extraction.json  support.json
breakpoint/engine/: aggregator.py  config.py  errors.py  evaluator.py  metrics.py  plugins.py  reason_codes.py  waivers.py
breakpoint/engine/policies/: cost.py  drift.py  latency.py  output_contract.py  pii.py
docs/: baseline-lifecycle.md  ci-templates.md  decision-contract-v1.md  github-issues-backlog.md  install-worthy-examples.md  policy-presets.md  quickstart-10min.md  release-gate-audit.md  release-notes-v0.2.0-rc1.md  release-notes-v0.2.0-rc2.md  release-validation-v0.2.0-rc2.md  terminal-output-lite-vs-full.md  use-case-real.md  user-guide-full-mode.md  user-guide.md  value-metrics.md
examples/ci/: github-actions-breakpoint.yml
examples/fastapi-llm-demo/: Makefile  demo-fastapi.cast  requirements.txt
examples/fastapi-llm-demo/.github/workflows/: breakpoint-gate.yml
examples/fastapi-llm-demo/app/: __init__.py  llm.py  main.py  prompts.py
examples/fastapi-llm-demo/app/baselines/: baseline.json
examples/fastapi-llm-demo/candidates/: bad_format.json  bad_pii.json  bad_tokens.json  good.json
examples/fastapi-llm-demo/tests/: test_agent.py
examples/presets/: chatbot.json  extraction.json  support.json
examples/quickstart/: baseline.json  candidate_allow.json  candidate_block.json  candidate_warn.json  custom_policy.json
scripts/: run-install-worthy-demo.sh
test_examples/: NEW_TEST_RESULTS.md  baseline_borderline.json  baseline_clean.json  baseline_fast.json  baseline_short.json  baseline_token_cost.json  candidate_borderline_warn.json  candidate_credit_card.json  candidate_empty.json  candidate_latency_issue.json  candidate_token_cost_spike.json  candidate_true_borderline.json  candidate_valid_credit_card.json
tests/: test_baseline_lifecycle.py  test_ci_templates.py  test_cli.py  test_cli_metrics.py  test_evaluate.py  test_install_worthy_examples.py  test_metrics.py  test_output_contract_recursive.py  test_packaging.py  test_plugins.py  test_quickstart_samples.py  test_waivers.py
tests/baselines/: test_unstable_output_blocks.json  test_unstable_output_warns.json
tests/fixtures/baseline_lifecycle/: baseline_current.json  baseline_previous.json  candidate.json
tests/fixtures/cli_golden/: allow.txt  block.txt  warn.txt
