[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breakpoint-ai"
version = "0.1.7"
description = "Local-first decision engine for baseline vs candidate LLM output checks."
readme = "README.md"
authors = [{ name = "Christopher Holmes", email = "c.holmes.silva@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = []
keywords = ["llm", "ai", "evaluation", "baseline", "ci", "quality-gate", "pii", "cost-regression", "drift-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
ml = [
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
]

[project.scripts]
breakpoint = "breakpoint.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"breakpoint.config" = ["*.json"]
"breakpoint.config.presets" = ["*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["breakpoint*"]

[project.entry-points."pytest11"]
breakpoint = "breakpoint.pytest_plugin"
